      [Slaven Rezic]
    - instmodsh now using more portable tar flags to create archives.
      [Slaven Rezic]
    - Added FAQ entry for "How do I use a module without installing it?"
      and "How do I keep from installing man pages?" [Joe Cromie]
    - Fixed finding the default MANIFEST.SKIP if its on a different volume
      [Ilya Zakharevich]

6.21 Tue Nov 11 00:12:56 PST 2003
    - NetBSD was looking in INSTALLARCHLIB/CORE for libperl instead of 
      PERL_ARCHLIB/CORE.  Would cause problems if INSTALLARCHLIB was changed
      (ie. LIB or PREFIX used). [Jochen Eisinger]
    - Turns out a handful of modules use dir_target().  Restored a version
      for backwards compatibility.
    - Moved blibdirs target from top_targets() to its own section.  Lots of
      modules rewrite top_targets() so blibdirs wouldn't be written.

6.20 Thu Nov  6 02:25:58 PST 2003
    - Fixing dos2unix on Cygwin.  In-place editing doesn't work 100% so we
      take a more conservative approach.
    - Small postamble.t test temp file cleanup fix for Cygwin and Windows.
    - Small Command.t test fix for 5.5.3.  No real bug [rt 4290]
    - Small Liblist fix for Cygwin and import libraries [Gerrit P. Haase]
    - metafile error message slightly mangled.  Bare $! mistake confusing 
      nmake [rt 4285 4301]

6.19 Mon Nov  3 22:53:56 PST 2003
    - Removed 00setup_dummy.t and zz_cleanup_dummy.t.  Tests now setup and
      teardown the dummy modules as needed.
    - Little test glitch on systems without $Config{usevendorprefix} set
    - INSTALL(SITE|VENDOR)MAN*DIR now fall back to $(INSTALLMAN*DIR)
      instead of copying its value.  This lets "perl Makefile.PL 
      INSTALLMAN1DIR=/some/man/man1" work like expected.

6.18 Mon Nov  3 20:09:51 PST 2003
    - parse_version() was blowing over $_ (Ilya Zakharevich)
    - 5.6.2 has the same Cygwin shared lib name fix as 5.7.0. (Gerrit Haase)
    * When $Config{install(site|vendor)man*dir} aren't set it will now